# Dynamic-Neural-Curiosity

./: README.md
ErrorSubscriber/: CMakeLists.txt  README.md  cedarProject.cmake
ErrorSubscriber/ErrorSubscriber/: ErrorSubscriber.cpp  ErrorSubscriber.h  plugin.cpp
Gazebo/simball/: CMakeLists.txt  hello.world  model.sdf  package.xml  simball.cc
Gazebo/simcube/: CMakeLists.txt  hello.world  model.sdf  package.xml  simcube.cc
Gazebo/simcylinder/: CMakeLists.txt  hello.world  model.config  model.sdf  package.xml  simcylinder.cc
IterativeBoost/: README.md
Models/: mid.json  mid.json.data
PosToField/: CMakeLists.txt  README.md
PosToField/PosToField/: PosToField.cpp  PosToField.h  plugin.cpp
Preshape/: CMakeLists.txt  README.md  cedarProject.cmake
RoSGoalPublisher/: CMakeLists.txt  README.md
RosBool/: CMakeLists.txt  README.md  cedarProject.cmake
RosDatas/: CMakeLists.txt  README.md
RosFloat/: CMakeLists.txt  README.md
RosFloatPublisher/: CMakeLists.txt  README.md
RosGoalContPub/: CMakeLists.txt  README.md  cedarProject.cmake
RosGoalSubscriber/: CMakeLists.txt  README.md
RosHebbian/: CMakeLists.txt  README.md
RosInitCedar/: README.md  cedarProject.cmake
RosMotor2D/: README.md
RosScene/: README.md
affordances/: CMakeLists.txt  package.xml
data_recorder/: CMakeLists.txt  package.xml
hebbian_dmp/: CMakeLists.txt  package.xml
motion/: CMakeLists.txt  package.xml
perception/: CMakeLists.txt  package.xml
proprioception/: CMakeLists.txt  package.xml
sim_dim/: CMakeLists.txt  package.xml
video/: demo.srt
(+56 files in other folders)
